[project]
name = "mtcli-pa"
version = "0.1.1"
description = "Plugin mtcli para calcular níveis e projeções de price action"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/vfranca/mtcli-pa"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[tool.poetry.plugins."mtcli.plugins"]
pa = "mtcli_pa.pa:pa"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
