[project]
name = "mtcli-pa"
version = "1.0.2"
description = "Plugin mtcli para calcular níveis e projeções de price action"
readme = "docs/README.md"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1,<2.0.0)",
]

[project.urls]
repository = "https://github.com/vfranca/mtcli-pa"
homepage = "https://github.com/vfranca/mtcli-pa"
documentation = "https://vfranca.github.io/mtcli-pa"
issues = "https://github.com/vfranca/mtcli-pa/issues"

[project.entry-points."mtcli.plugins"]
pa = "mtcli_pa.pa:pa"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

