[project]
name = "mtcli-pricelevels"
version = "1.0.4.dev0"
description = "Plugin mtcli para calcular níveis e projeções de price action"
readme = "docs/README.md"
authors = [
    {name = "Valmir França",email = "vfranca3@gmail.com"}
]
license = "GPL-3.0"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.18.1)",
]

[project.urls]
repository = "https://github.com/vfranca/mtcli-pricelevels"
homepage = "https://github.com/vfranca/mtcli-pricelevels"
documentation = "https://vfranca.github.io/mtcli-pricelevels"
issues = "https://github.com/vfranca/mtcli-pricelevels/issues"

[project.entry-points."mtcli.plugins"]
mtcli-pricelevels = "mtcli_pricelevels.pa:pa"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

